--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -15,6 +15,9 @@
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
     <script type="text/javascript" src="__STATIC__/js/layui-xtree.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/layui_exts/excel.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/layui_exts/FileSaver.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/layui_exts/xlsx.js"></script>
 </head>
 <body>
 <div class="container-scroller">
@@ -104,3 +107,12 @@
 </body>
 
 </html>
+<script type="text/javascript">
+    layui.config({
+        base: 'layui_exts/',
+    }).extend({
+        excel: 'excel',
+        FileSaver: 'FileSaver',// 如果所有扩展放一起可忽略此行配置
+        xlsx: 'xlsx',// 如果所有扩展放一起可忽略此行配置
+    });
+</script>
