--- a/application/admin/view/login/login.html
+++ b/application/admin/view/login/login.html
@@ -43,7 +43,7 @@
                       <i class="mdi mdi-eye"></i>
                     </div>
                     <div class="mt-5">
-                      <a class="btn btn-block btn-warning btn-lg font-weight-medium" onclick="login()">Login</a>
+                      <a class="btn btn-block btn-warning btn-lg font-weight-medium">Login</a>
                     </div>
                     <div class="mt-3 text-center">
                       <a href="#" class="auth-link text-white">Forgot password?</a>
@@ -79,6 +79,9 @@
             if((e.keyCode || e.which)==13) {
                 login();
             }
+        });
+        $('.btn-lg').on('click',function () {
+            login();
         });
     });
 
