管理员后台教师管理调整，调整教师/学生表结构，添加教师/学生号字段，调整excel导入导出功能，部分文案错误修改

--- a/application/admin/view/student/add.html
+++ b/application/admin/view/student/add.html
@@ -45,6 +45,13 @@
     </div>
 
     <div class="layui-form-item">
+        <label class="layui-form-label">学号</label>
+        <div class="layui-input-block">
+            <input type="text" name="student_no" value="{$info['student_no']?$info['student_no']:''}" autocomplete="off" placeholder="请输入学生名" class="layui-input require">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
         <div class="layui-inline">
             <label class="layui-form-label">单选框</label>
             <div class="layui-input-inline">
