--- a/application/admin/view/student/index.html
+++ b/application/admin/view/student/index.html
@@ -28,7 +28,7 @@
                     <form class="forms-sample filters">
                         <div class="">
                             <div class="input-group col-xs-12">
-                                <input type="text" class="form-control form-control-sm" placeholder="输入教师名搜索" name="search_key">
+                                <input type="text" class="form-control form-control-sm" placeholder="输入姓名、学号搜索" name="search_key">
                                 <span class="input-group-append"><button class="btn btn-info search-btn" type="button">搜索</button></span>
                             </div>
                         </div>
@@ -66,6 +66,7 @@
                         <tr>
                             <th>ID</th>
                             <th>姓名</th>
+                            <th>学号</th>
                             <th>性别</th>
                             <th>头像</th>
                             <th>联系方式</th>
@@ -77,9 +78,10 @@
                         <tr>
                             <td>{$i}</td>
                             <td>{$vo.name}</td>
+                            <td>{$vo.student_no}</td>
                             <td>{$vo['sex']==1?'男':'女'}</td>
                             <td class="showPhotos"><img src="__STATIC__{$vo.avatar}" width="100px" alt=""></td>
-                            <td>{$vo.email}</td>
+                            <td title="{$vo.email}">{$vo.email|msubstr=0,15,'utf-8',true}</td>
                             <td>
                                 <a class="layui-btn layui-btn-xs student_edit" lay-event="edit" data-id="{$vo.id}" data-href="{:url('admin/studentAdd',['id'=>$vo.id])}">编辑</a>
                                 <a class="layui-btn layui-btn-danger layui-btn-xs student_del" lay-event="del" data-id="{$vo.id}" data-href="{:url('admin/studentDel',['id'=>$vo.id])}">删除</a>
@@ -114,11 +116,11 @@
         }
 
         $('.student_edit').on('click',function () {
-            alt('编辑课程',$(this));
+            alt('编辑学生',$(this));
         });
 
         $('.student_add').on('click',function () {
-            alt('添加课程',$(this));
+            alt('添加学生',$(this));
         });
 
         function alt(title,dom){
@@ -167,15 +169,15 @@
         //导出
         $('.btn_export').on('click',function () {
             export_import_manager.ajaxExport('{:url("admin/studentExport")}',
-                '教师信息',
-                {name: '教师名',sex: '性别', dept_name: '部门' ,bir: '生日', email: '邮箱'},
-                ['name','sex','dept_name','bir','email']);
+                '学生信息',
+                {name: '教师名', student_no: '学号',sex: '性别' ,bir: '生日', email: '邮箱'},
+                ['name','student_no','sex','bir','email']);
         });
 
         //导入
         $('.btn_import').on('click',function () {
                 // 监听上传文件的事件
-            importwindow('选择文件','{:url("admin/studentImport")}');
+            importwindow('选择文件','{:url("admin/studentImport",["type"=>2])}');
         });
 
         function importwindow(title,open_url) {
