--- a/application/Index/view/layouts/layout.html
+++ b/application/Index/view/layouts/layout.html
@@ -26,6 +26,12 @@
         width: calc(100%);
         margin-left: 0px;
     }
+    .user-reg,.user-login{
+        color: #FFFFFF;
+    }
+    .user-reg,.user-login:hover{
+        cursor: pointer;
+    }
 </style>
 <body>
 <div class="container-scroller">
@@ -35,7 +41,23 @@
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center">
             <p class="page-name d-none d-lg-block">Hi, BIGDATA</p>
+            <!--<form>-->
+                <!--<div class="form-group">-->
+                    <!--<div class="input-group">-->
+                        <!--<input type="text" class="form-control input-sm no-border rounded" placeholder="Search songs, albums...">-->
+                        <!--<span class="input-group-btn">-->
+                          <!--<button type="submit" class="btn btn-sm bg-white btn-icon rounded"><i class="fa fa-search"></i></button>-->
+                        <!--</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</form>-->
             <ul class="navbar-nav ml-lg-auto">
+                <li class="nav-item d-none d-sm-block">
+                    <span class="nav-link hidden-nav-xs m-l-sm user-reg">注册</span>
+                </li>
+                <li class="nav-item d-none d-sm-block">
+                    <span class="nav-link hidden-nav-xs m-l-sm user-login">登录</span>
+                </li>
                 <li class="nav-item d-none d-sm-block profile-img">
                     <a class="nav-link profile-image" href="#">
                         <img src="__STATIC__/admin/images/faces/face4.jpg" style="width: 43px;height: 43px" alt="profile-img">
