--- a/public/static/index/css/app.css
+++ b/public/static/index/css/app.css
@@ -2972,8 +2972,8 @@ a.bg-light:focus {
   padding: 50px;
 }
 .padder-lg {
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 10em;
+  padding-right: 10em;
 }
 .padder-md {
   padding-left: 20px;
@@ -2984,7 +2984,7 @@ a.bg-light:focus {
   padding-right: 15px;
 }
 .padder-v {
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 15px;
 }
 .no-padder {
@@ -3592,8 +3592,8 @@ fieldset[disabled] .i-checks input + i:before {
     padding: 15px;
   }
   .padder-lg {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 10em;
+    padding-right: 10em;
   }
 }
 .musicbar {
