前台样式引入，首页完善、添加视频详情页

--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -4,17 +4,13 @@
     <meta charset="utf-8" />
     <title>BIGDATA</title>
     <meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
-    <link rel="shortcut icon" href="__STATIC__/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <!--<link rel="stylesheet" href="__STATIC__/index/js/jPlayer/jplayer.flat.css" type="text/css" />-->
     <link rel="stylesheet" href="__STATIC__/index/css/bootstrap.css" type="text/css" />
-    <!--<link rel="stylesheet" href="__STATIC__/index/css/animate.css" type="text/css" />-->
     <link rel="stylesheet" href="__STATIC__/index/css/font-awesome.min.css" type="text/css" />
-    <!--<link rel="stylesheet" href="__STATIC__/index/css/simple-line-icons.css" type="text/css" />-->
-    <!--<link rel="stylesheet" href="__STATIC__/index/css/font.css" type="text/css" />-->
+    <link rel="stylesheet" href="__STATIC__/index/css/simple-line-icons.css" type="text/css" />
+    <link rel="stylesheet" href="__STATIC__/index/css/animate.css" type="text/css" />
     <link rel="stylesheet" href="__STATIC__/index/css/app.css" type="text/css" />
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
-
     <!--<link rel="stylesheet" href="__STATIC__/admin/css/style.css">-->
     <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
@@ -25,11 +21,6 @@
     <!--<script type="text/javascript" src="__STATIC__/js/layui_exts/excel.js"></script>-->
     <!--<script type="text/javascript" src="__STATIC__/js/layui_exts/FileSaver.js"></script>-->
     <!--<script type="text/javascript" src="__STATIC__/js/layui_exts/xlsx.js"></script>-->
-    <!--[if lt IE 9]>
-    <!--<script src="__STATIC__/index/js/ie/html5shiv.js"></script>-->
-    <!--<script src="__STATIC__/index/js/ie/respond.min.js"></script>-->
-    <!--<script src="__STATIC__/index/js/ie/excanvas.js"></script>-->
-    <![endif]-->
 </head>
 <body class="">
 <section class="vbox">
@@ -37,8 +28,8 @@
         <div class="navbar-left ">
             <ul class="nav navbar-nav m-n hidden-xs nav-user user">
                 <li class="">
-                    <a href="index.html" >
-                        <img src="__STATIC__/admin/images/logo.svg" class="hide">
+                    <a href="index.html" class="" style="padding-top: 10px;padding-bottom: 10px">
+                        <img src="__STATIC__/admin/images/logo.svg" width="40px">
                         <span class="hidden-nav-xs m-l-sm">BIGDATA</span>
                     </a>
                 </li>
@@ -79,10 +70,10 @@
                             </div>
                             <div class="list-group list-group-alt">
                                 <a href="#" class="media list-group-item">
-                    <span class="media-body block m-b-none">
-                      1.0 initial released<br>
-                      <small class="text-muted">1 hour ago</small>
-                    </span>
+                                    <span class="media-body block m-b-none">
+                                      1.0 initial released<br>
+                                      <small class="text-muted">1 hour ago</small>
+                                    </span>
                                 </a>
                             </div>
                             <div class="panel-footer text-sm">
@@ -143,9 +134,10 @@
 <script src="__STATIC__/index/js/app.js"></script>
 <script src="__STATIC__/index/js/slimscroll/jquery.slimscroll.min.js"></script>
 <script src="__STATIC__/index/js/app.plugin.js"></script>
-<script type="text/javascript" src="__STATIC__/index/js/jPlayer/jquery.jplayer.min.js"></script>
-<script type="text/javascript" src="__STATIC__/index/js/jPlayer/add-on/jplayer.playlist.min.js"></script>
-<script type="text/javascript" src="__STATIC__/index/js/jPlayer/demo.js"></script>
+<!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/jquery.jplayer.min.js"></script>-->
+<!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/add-on/jplayer.playlist.min.js"></script>-->
+<!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/demo.js"></script>-->
+<!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/jPlayer/jplayer.flat.css"></script>-->
 
 <script>
     // add notes
