--- a/application/Index/view/index/index.html
+++ b/application/Index/view/index/index.html
@@ -1,41 +1,26 @@
 {layout name="layouts/layout1" /}
-<!--<div class="row" id="adminhome" style="min-height: 100%;">-->
-    <!--<section>-->
-        <!--<section class="hbox stretch">-->
-            <!--<section id="content">-->
-                <!--<section class="vbox" id="bjax-el">-->
-                    <!--<section class="scrollable padder-lg padder-v">-->
 
-                        <div class="row row-sm">
-                            {volist name='list' id='vo'}
-                            <div class="col-xs-6 col-sm-4 col-md-3">
-                                <div class="item">
-                                    <div class="pos-rlt">
-                                        <div class="item-overlay opacity r r-2x bg-black">
-                                            <div class="center text-center m-t-n">
-                                                <a href="#"><i class="fa fa-play-circle i-2x"></i></a>
-                                            </div>
-                                        </div>
-                                        <a href="#"><img src="__STATIC__{$vo.poster}" alt="" style="height: 10em;" class="r r-2x img-full"></a>
-                                    </div>
-                                    <div class="padder-v">
-                                        <a href="#" class="text-ellipsis">{$vo.name}</a>
-                                        <a href="#" class="text-ellipsis text-xs text-muted">Miaow</a>
-                                    </div>
-                                </div>
-                            </div>
-                            {/volist}
+    <div class="row row-sm">
+        {volist name='list' id='vo'}
+        <div class="col-xs-6 col-sm-4 col-md-3">
+            <div class="item">
+                <div class="pos-rlt">
+                    <div class="item-overlay opacity r r-2x bg-black">
+                        <div class="center text-center m-t-n">
+                            <a href="#"><i class="fa fa-play-circle i-2x"></i></a>
                         </div>
+                    </div>
+                    <a href="#"><img src="__STATIC__{$vo.poster}" alt="" style="height: 9em;" class="r r-2x img-full"></a>
+                </div>
+                <div class="padder-v">
+                    <a href="#" class="text-ellipsis">{$vo.name}</a>
+                    <a href="#" class="text-ellipsis text-xs text-muted">Miaow</a>
+                </div>
+            </div>
+        </div>
+        {/volist}
+    </div>
 
-                        <div class="d-flex align-items-centerx justify-content-between flex-wrap">
-                            <nav>
-                                {$list->render()}
-                            </nav>
-                        </div>
-                    <!--</section>-->
-                <!--</section>-->
-                <!--<a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen,open" data-target="#nav,html"></a>-->
-            <!--</section>-->
-        <!--</section>-->
-    <!--</section>-->
-<!--</div>-->
+    <div class="text-center">
+        {$list->render()}
+    </div>
