--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="__STATIC__/index/css/animate.css" type="text/css" />
     <link rel="stylesheet" href="__STATIC__/index/css/app.css" type="text/css" />
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/jPlayer/jplayer.flat.css"></script>
     <!--<link rel="stylesheet" href="__STATIC__/admin/css/style.css">-->
-    <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
+    <!--<link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">-->
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/img/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
