--- a/application/Index/view/index/index.html
+++ b/application/Index/view/index/index.html
@@ -1,16 +1,25 @@
+<style>
+    .page_items .pagination{
+        display: inline-flex;
+    }
+    .page_items .pagination .page-item .page-link{
+        font-size: 1.2rem;
+    }
+</style>
+
 {layout name="layouts/layout1" /}
 
     <div class="row row-sm">
         {volist name='list' id='vo'}
-        <div class="col-xs-6 col-sm-4 col-md-3">
+        <div class="col-xs-6 col-sm-3 col-md-2">
             <div class="item">
                 <div class="pos-rlt">
                     <div class="item-overlay opacity r r-2x bg-black">
                         <div class="center text-center m-t-n">
-                            <a href="#"><i class="fa fa-play-circle i-2x"></i></a>
+                            <a href="{:url('index/details',['id'=>$vo.id])}"><i class="fa fa-play-circle i-2x"></i></a>
                         </div>
                     </div>
-                    <a href="#"><img src="__STATIC__{$vo.poster}" alt="" style="height: 9em;" class="r r-2x img-full"></a>
+                    <a href="#"><img src="__STATIC__{$vo.poster}" alt="" style="height: 7em;" class="r r-2x img-full"></a>
                 </div>
                 <div class="padder-v">
                     <a href="#" class="text-ellipsis">{$vo.name}</a>
@@ -21,6 +30,6 @@
         {/volist}
     </div>
 
-    <div class="text-center">
+    <div class="row text-center page_items">
         {$list->render()}
     </div>
