添加头像上传裁剪，调整公共js，封装部分js方法

--- a/application/Index/view/index/details.html
+++ b/application/Index/view/index/details.html
@@ -1,27 +1,27 @@
 {layout name="layouts/layout1" /}
 <style>
-  .video_params .list-group-item,.panel{
+  .page-inner .video_params .list-group-item,.panel{
     background-color:#f2f4f8;
   }
-  .video_params .panel{
+  .page-inner .video_params .panel{
     border: none;
   }
-  .suggestion {
+  .page-inner .suggestion {
     background-color: white;
   }
    .nav > li > a:hover {
     text-decoration: none;
     color: #000000;
   }
-   .nav > li:hover {
+   .page-inner .nav > li:hover {
     background-color: #edf2f3;
   }
-   .list-group-item {
+   .page-inner .list-group-item {
      margin-bottom: 0px;
      border: none;
      border-bottom: 1px solid #ddd;
   }
-  .files-list div{
+  .page-inner .files-list div{
     padding-left: 0px;
     padding-right: 0px;
   }
