--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -29,7 +29,7 @@
         <div class="navbar-left ">
             <ul class="nav navbar-nav m-n hidden-xs nav-user user">
                 <li class="">
-                    <a href="index.html" class="" style="padding-top: 10px;padding-bottom: 10px">
+                    <a href="{:url('index')}" class="" style="padding-top: 10px;padding-bottom: 10px">
                         <img src="__STATIC__/admin/images/logo.svg" width="40px">
                         <span class="hidden-nav-xs m-l-sm">BIGDATA</span>
                     </a>
@@ -121,7 +121,7 @@
         <section class="hbox stretch">
             <section id="content">
                 <section class="vbox" id="bjax-el">
-                    <section class="scrollable padder-lg padder-v">
+                    <section class="scrollable padder-lg padder-v page-inner">
                         {__CONTENT__}
                     </section>
                 </section>
