--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -7,6 +7,7 @@
     <title>BigData Admin</title>
     <link rel="stylesheet" href="__STATIC__/admin/css/style.css">
     <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
+    <link rel="stylesheet" href="__STATIC__/js/cropper/cropper.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <!--<link rel="stylesheet" href="__STATIC__/js/layer/mobile/need/layer.css">-->
     <link rel="shortcut icon" href="__STATIC__/img/favicon.png" />
@@ -18,6 +19,8 @@
     <script type="text/javascript" src="__STATIC__/js/layui_exts/excel.js"></script>
     <script type="text/javascript" src="__STATIC__/js/layui_exts/FileSaver.js"></script>
     <script type="text/javascript" src="__STATIC__/js/layui_exts/xlsx.js"></script>
+    <!--<script type="text/javascript" src="__STATIC__/js/cropper/cropper.js"></script>-->
+    <!--<script type="text/javascript" src="__STATIC__/js/cropper/croppers.js"></script>-->
 </head>
 <body>
 <div class="container-scroller">
@@ -119,8 +122,11 @@
     layui.config({
         base: 'layui_exts/',
     }).extend({
-        excel: 'excel',
-        FileSaver: 'FileSaver',// 如果所有扩展放一起可忽略此行配置
-        xlsx: 'xlsx',// 如果所有扩展放一起可忽略此行配置
+        excel: 'excel'
     });
+    // layui.config({
+    //     base: 'cropper/'
+    // }).extend({
+    //     cropper: 'cropper'
+    // })
 </script>
