--- a/application/admin/view/teacher/add.html
+++ b/application/admin/view/teacher/add.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="__STATIC__/admin/css/style.css">
     <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
+    <link rel="stylesheet" href="__STATIC__/js/cropper/cropper.css">
+
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/admin/images/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
     <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="__STATIC__/js/layui-xtree.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/cropper/cropper.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/cropper/croppers.js"></script>
 
 </head>
 <style>
@@ -106,7 +110,40 @@
 
 <script>
     //上传文件
-    file_upload_manager.normalUpload('{:url("admin/upload")}',{},'#test1','#demo1','#poster');
+    // layui.config({
+    //     base: 'cropper/' //layui自定义layui组件目录
+    // }).use(['form','croppers'], function () {
+    //     var $ = layui.jquery
+    //         ,croppers = layui.croppers
+    //         ,layer= layui.layer;
+    //
+    //     //创建一个头像上传组件
+    //     croppers.render({
+    //         elem: '#editimg'
+    //         ,saveW:150     //保存宽度
+    //         ,saveH:150
+    //         ,mark:1/1    //选取比例
+    //         ,area:'600px'  //弹窗宽度
+    //         ,url: '{:url("admin/upload")}'  //图片上传接口返回和（layui 的upload 模块）返回的JOSN一样
+    //         ,done: function(res,index){
+    //             console.log(res.file_url);
+    //             $('#demo1').attr('src', res.file_url);
+    //             $('#poster').val(res.file_url);
+    //             layui.layer.close(index);
+    //         }
+    //     });
+    // });
+    file_upload_manager.croppersUpload('{:url("admin/upload")}',{},'#test1',function (res,index) {
+        if(res.is_ok != 'ok'){
+            layer.msg('上传失败');
+        }else{
+            var file_url = '__STATIC__/'+res.file_url;
+            $('#demo1').attr('src', file_url);
+            $('#poster').val(res.file_url);
+            layui.layer.close(index);
+            layer.msg('上传成功');
+        }
+    });
     layui.use(['form', 'layedit', 'laydate'], function() {
         var form = layui.form
             , layer = layui.layer
